refactor(events): replace findActiveEventsWithDateBefore with EventFilter factory method
Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>